--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="blank.html"><i class="fas fa-tachometer-alt"></i><span>Enquiries&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><i class="fas fa-chevron-right"></i></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Enquiries&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><i class="fas fa-chevron-right"></i></a></li>
                     <li
                         class="nav-item" role="presentation"><a class="nav-link" href="#"><i class="fas fa-user"></i><span>Follow Ups</span></a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#"><i class="icon ion-email"></i><span>Emails</span></a></li>
